--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -4,7 +4,7 @@ RUN apk add --no-cache bash curl bind-tools whois dnscrypt-proxy autoconf automa
 RUN cd /root && git clone https://github.com/jech/polipo && cd polipo && make
 RUN GOPATH=/go go get github.com/txthinking/brook/cli/brook
 
-FROM arm32v6/golang:1.16-alpine
+FROM arm32v6/alpine:3.14
 
 RUN apk update
 RUN apk add bash curl bind-tools whois dnscrypt-proxy proxychains-ng npm
